# libtape

./: .gitignore  .gitmodules  README.md  index.html  libcassette.doap  libtape.doap  meson.build  meson_options.txt  uncrustify.cfg
.forgejo/workflows/: main.yml
build-aux/altlinux/: libtape.spec.in  prepare  rules
doc/: meson.build
lib/: client.vala  config.vapi  content-handler.vala  enums.vala  errors.vala  hash-store.vala  jsoner.vala  libcassette-1.deps  likes-controller.vala  logger.vala  meson.build  settings.vala  soup-wrapper.vala  threader.vala  utils.vala  ya-m-helper.vala  ya-m-talker.vala  yandex-music.vala
lib/cache-manager/: cache-manager.vala  info-db.vala  jober.vala.dis  meson.build  storager.vala
lib/cachier/: cachier.vala  controller.vala  humanity-size.vala  info-db.vala  job.vala  job.vala.dis  jober.vala  location.vala  meson.build  storager.vala
lib/model-manager/: likes-models.vala  meson.build  model-manager.vala
lib/player/: gst-player.vala  meson.build  mpris.vala  player.vala
lib/player/mods/: abstract-mode.vala  abstract-shufflable.vala  empty.vala  flow.vala  local.vala  track-list.vala
lib/soup-wrapper/: header.vala  headers.vala  post-content.vala  soup-utils.vala  soup-wrapper.vala
lib/talkers/: abstract-talker.vala  yam-talker.vala
lib/ya-m-api/: client.vala  difference-builder.vala  enums.vala  has-cover.vala  has-id.vala  has-tracks.vala  jsoner.vala  utils.vala  ya-m-client.vala  ya-m-object.vala  yam-client.vala
lib/ya-m-api/objects/: api-error.vala  cover.vala  download-info.vala  icon.vala  play.vala  plays.vala  track-heap.vala  track-short.vala
lib/ya-m-api/objects/account/: about.vala
lib/ya-m-api/objects/additional-info/: lyrics-major.vala  lyrics.vala  similar-tracks.vala
lib/ya-m-api/objects/album/: album.vala  label.vala
lib/ya-m-api/objects/artist/: artist.vala  counts.vala  link.vala  ratings.vala
lib/ya-m-api/objects/playlist/: case-forms.vala  liked-playlist.vala  made-for.vala  play-counter.vala  playlist-absence.vala  playlist-recommendations.vala  playlist.vala  user.vala
lib/ya-m-api/objects/rotor/: block.vala  dashboard.vala  event.vala  feedback.vala  id.vala  queue.vala  restrictions.vala  seed.vala  sequence.vala  session-new.vala  settings.vala  station-info.vala  station-tracks.vala  station.vala  track-parameters.vala  utils.vala  value-heap.vala  value.vala  wave.vala
lib/ya-m-api/objects/track/: chart.vala  lyrics-info.vala  meta-data.vala  track.vala
lib/yandex-music/: client.vala  has-cover.vala  has-id.vala  meson.build  yandex-music.vala
lib/yandex-music/objects/: download-info.vala  track-short.vala
lib/yandex-music/objects/additional-info/: lyrics.vala  similar-tracks.vala
lib/yandex-music/objects/album/: album.vala  label.vala
lib/yandex-music/objects/artist/: artist.vala  ratings.vala
lib/yandex-music/objects/playlist/: case-forms.vala  playlist-absence.vala  playlist.vala  user.vala
lib/yandex-music/objects/rotor/: feedback.vala  restrictions.vala  session-new.vala  settings.vala  station-tracks.vala  station.vala  track-parameters.vala  value.vala  wave.vala
libtape-0/: Config.DATADIR.html  Config.GETTEXT_PACKAGE.html  Config.GNOMELOCALEDIR.html  Config.LIBRARY_NAME.html  Config.html  Tape.CacheManager.CacheManager.html  Tape.CacheManager.html  Tape.CacheManager.load_image_by_uri.html  Tape.CacheManager.storager.html  Tape.CacheingState.LOADING.html  Tape.CacheingState.NONE.html  Tape.CacheingState.PERM.html  Tape.CacheingState.TEMP.html  Tape.CacheingState.html  Tape.CantUseError.NO_PLUS.html  Tape.CantUseError.html  Tape.Client.Client.html  Tape.Client.abort.html  Tape.Client.cm.html  Tape.Client.html  Tape.Client.init.html  Tape.Client.logout.html  Tape.Client.mpris_uri_open.html  Tape.Client.network_available.html  Tape.Client.player.html  Tape.Client.quit.html  Tape.Client.raise.html  Tape.Client.settings.html  Tape.Client.ym.html  Tape.ContentType.ALBUM.html  Tape.ContentType.IMAGE.html  Tape.ContentType.PLAYLIST.html  Tape.ContentType.TRACK.html  Tape.ContentType.html  Tape.HashModel.@set.html  Tape.HashModel.HashModel.html  Tape.HashModel.append.html  Tape.HashModel.changed.html  Tape.HashModel.clear.html  Tape.HashModel.contains.html  (+786 more)
subprojects/: libapi-base.wrap
tests/: api-test.vala  meson.build  test-config.vapi
