option('documentation', type: 'boolean', value: false, description: 'generate documentation with gtk-doc and valadoc')
option('introspection', type: 'boolean', value: true, description: 'Whether to build introspection files')

# tests
option('token', type: 'string', value: '', description: 'Token for API tests. If empty tests will skipped')
