vapi_sources = files(
  'config.vapi',
)

vala_sources = files(
  run_command(
    'find', '.', '-name', '*.vala', '-type', 'f',
    check: true
  ).stdout().strip().replace('./', '').split('\n')
)

sources = [
  vapi_sources,
  vala_sources,
]

lib = shared_library(
  lib_name,
  sources,
  dependencies: dependencies,
  include_directories: config_h_dir,
  vala_header: header_name,
  vala_vapi: vapi_name,
  vala_gir: gir_name,
  link_args: ['-lm'],
  version: libversion,
  install: true,
  install_dir: [true, true, true, true],
)

lib_dep = declare_dependency(
  link_with: lib,
  include_directories: include_directories('.'),
  dependencies: dependencies
)

deps_conf = configuration_data()
deps_conf.set ('DEPS',  '\n'.join (deps_pkgs))

configure_file(
  input: 'lib.deps.in',
  output: deps_name,
  configuration: deps_conf,
  install: true,
  install_dir: get_option('datadir') / 'vala' / 'vapi',
)

if get_option('introspection')
  g_ir_compiler = find_program('g-ir-compiler')
  custom_target(
    'typelib',
    command: [
      g_ir_compiler,
      '--shared-library', '@PLAINNAME@',
      '--output', '@OUTPUT@',
      '--includedir', gee_dep.get_variable('datadir') / 'gir-1.0',
      meson.current_build_dir() / gir_name,
    ],
    input: lib,
    output: typelib_name,
    depends: lib,
    install: true,
    install_dir: get_option('libdir') / 'girepository-1.0',
  )
endif

pkgconfig.generate(
  lib,
  name: versioned_name,
  requires: pgconfig_dependencies,
  subdirs: [ versioned_name ],
  description: pkgc_description,
  version: libversion,
  url: pkgc_url,
)
