vala_sources += files(
  'objects/account/about.vala',
  'objects/additional-info/lyrics-major.vala',
  'objects/additional-info/lyrics.vala',
  'objects/additional-info/similar-tracks.vala',
  'objects/album/album.vala',
  'objects/album/label.vala',
  'objects/artist/artist.vala',
  'objects/artist/counts.vala',
  'objects/artist/link.vala',
  'objects/artist/ratings.vala',
  'objects/cover.vala',
  'objects/download-info.vala',
  'objects/icon.vala',
  'objects/library/all-ids.vala',
  'objects/play.vala',
  'objects/playlist/case-forms.vala',
  'objects/playlist/liked-playlist.vala',
  'objects/playlist/made-for.vala',
  'objects/playlist/play-counter.vala',
  'objects/playlist/playlist-absence.vala',
  'objects/playlist/playlist-recommendations.vala',
  'objects/playlist/playlist.vala',
  'objects/playlist/user.vala',
  'objects/plays.vala',
  'objects/rotor/block.vala',
  'objects/rotor/dashboard.vala',
  'objects/rotor/event.vala',
  'objects/rotor/feedback.vala',
  'objects/rotor/id.vala',
  'objects/rotor/queue.vala',
  'objects/rotor/restrictions.vala',
  'objects/rotor/seed.vala',
  'objects/rotor/sequence.vala',
  'objects/rotor/session-new.vala',
  'objects/rotor/settings.vala',
  'objects/rotor/station-info.vala',
  'objects/rotor/station-tracks.vala',
  'objects/rotor/station-tracks.vala',
  'objects/rotor/station.vala',
  'objects/rotor/track-parameters.vala',
  'objects/rotor/value-heap.vala',
  'objects/rotor/value.vala',
  'objects/rotor/wave.vala',
  'objects/track-heap.vala',
  'objects/track-short.vala',
  'objects/track/chart.vala',
  'objects/track/lyrics-info.vala',
  'objects/track/meta-data.vala',
  'objects/track/track.vala',

  'client.vala',
  'difference-builder.vala',
  'has-cover.vala',
  'has-id.vala',
  'utils.vala',
)
